--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,14 @@
         <activity
             android:name=".AdminMenu"
             android:label="@string/title_activity_admin_menu"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ClassActivity"
+            android:label="@string/title_activity_class"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ClientView_Activity" />
+        <activity android:name=".AddClassActivity" />
+        <activity android:name=".RegisterUserActivity"></activity>
     </application>
 
 </manifest>
