Almost working UserClass

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".ClientView_Activity" />
         <activity android:name=".AddClassActivity" />
         <activity android:name=".RegisterUserActivity"></activity>
+        <activity android:name=".UserClasses" />
     </application>
 
 </manifest>
