--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SET_ALARM"/>
+
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -48,6 +50,9 @@
         <activity android:name=".RegisterUserActivity" />
         <activity android:name=".UserClasses" />
         <activity android:name=".MainActivity"></activity>
+        <receiver android:name="ltd.solutions.software.myt.asfapp.AlertReceiver" >
+        </receiver>
+
     </application>
 
 </manifest>
