--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<<<<<<< HEAD
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-=======
-    <uses-permission android:name="android.permission.SET_ALARM"/>
-
->>>>>>> f232460880d314c11695a19cac7b8257858f522d
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SET_ALARM" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -29,7 +25,6 @@
             android:name=".SlashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,22 +48,15 @@
         <activity android:name=".AddClassActivity" />
         <activity android:name=".RegisterUserActivity" />
         <activity android:name=".UserClasses" />
-        <activity android:name=".MainActivity"></activity>
-<<<<<<< HEAD
-        <receiver
-            android:name="BroadcastManager"
-            android:label="BroadcastReceiverAux">
-            <intent-filter>
-                <action android:name="ALARM" />
+        <activity android:name=".MainActivity" />
 
-                <category android:name="android.intent.category.DEFAULT" />
+        <receiver android:name=".AlertReceiver">
+            <intent-filter>
+                <action android:name=".DISPLAY_NOTIFICATION" />
             </intent-filter>
         </receiver>
-=======
-        <receiver android:name="ltd.solutions.software.myt.asfapp.AlertReceiver" >
-        </receiver>
 
->>>>>>> f232460880d314c11695a19cac7b8257858f522d
+        <activity android:name=".NotificationActivity"></activity>
     </application>
 
 </manifest>
