View class attendants for admin enabled

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         </receiver>
 
         <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".AdminClassInfo" />
     </application>
 
 </manifest>
