--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,6 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        config {
-            keyAlias 'AsfApp'
-            keyPassword 'asfapp'
-            storeFile file('C:/Users/marne/Documents/Asfapp/app/release/app-release.apk')
-            storePassword 'asfapp'
-        }
-    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "ltd.solutions.software.myt.asfapp"
@@ -22,13 +14,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -38,6 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
