--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".UserDetails"
+            android:label="@string/title_activity_user_details"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -31,8 +35,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- -Maps -->
+        </activity> <!-- -Maps -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAa8o5iScAcUAAjH6bLNZxEn7yY1VbdOXA" />
@@ -59,7 +62,7 @@
 
         <activity android:name=".NotificationActivity" />
         <activity android:name=".AdminClassInfo" />
-        <activity android:name=".MassClassEdit"></activity>
+        <activity android:name=".MassClassEdit" />
     </application>
 
 </manifest>
