--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@
 /build
 /captures
 .externalNativeBuild
+.idea/caches/build_file_checksums.ser
+.idea/caches/gradle_models.ser
+.idea/codeStyles/Project.xml
+.idea/dictionaries/marne.xml
+.idea/gradle.xml
+.idea/jarRepositories.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
